; ModuleID = '/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_finalfix.c'
source_filename = "/home/carl/AnghaBench/skynet/3rd/lpeg/extr_lptree.c_finalfix.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, i32 }

@.str = private unnamed_addr constant [33 x i8] c"rule '%s' used outside a grammar\00", align 1
@numsiblings = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, %struct.TYPE_11__*, %struct.TYPE_11__*)* @finalfix to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @finalfix(i32* %0, i32 %1, %struct.TYPE_11__* %2, %struct.TYPE_11__* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_11__*, align 8
  %8 = alloca %struct.TYPE_11__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_11__* %2, %struct.TYPE_11__** %7, align 8
  store %struct.TYPE_11__* %3, %struct.TYPE_11__** %8, align 8
  br label %9

9:                                                ; preds = %48, %45, %4
  %10 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %11 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %37 [
    i32 130, label %13
    i32 129, label %14
    i32 128, label %34
    i32 131, label %34
  ]

13:                                               ; preds = %9
  br label %67

14:                                               ; preds = %9
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %16 = icmp ne %struct.TYPE_11__* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %21 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %22 = call i32 @fixonecall(i32* %18, i32 %19, %struct.TYPE_11__* %20, %struct.TYPE_11__* %21)
  br label %33

23:                                               ; preds = %14
  %24 = load i32*, i32** %5, align 8
  %25 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %26 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @lua_rawgeti(i32* %24, i32 -1, i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 @val2str(i32* %30, i32 -1)
  %32 = call i32 @luaL_error(i32* %29, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %23, %17
  br label %37

34:                                               ; preds = %9, %9
  %35 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %36 = call i32 @correctassociativity(%struct.TYPE_11__* %35)
  br label %37

37:                                               ; preds = %9, %34, %33
  %38 = load i32*, i32** @numsiblings, align 8
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %40 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i32, i32* %38, i64 %42
  %44 = load i32, i32* %43, align 4
  switch i32 %44, label %56 [
    i32 1, label %45
    i32 2, label %48
  ]

45:                                               ; preds = %37
  %46 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %47 = call %struct.TYPE_11__* @sib1(%struct.TYPE_11__* %46)
  store %struct.TYPE_11__* %47, %struct.TYPE_11__** %8, align 8
  br label %9

48:                                               ; preds = %37
  %49 = load i32*, i32** %5, align 8
  %50 = load i32, i32* %6, align 4
  %51 = load %struct.TYPE_11__*, %struct.TYPE_11__** %7, align 8
  %52 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %53 = call %struct.TYPE_11__* @sib1(%struct.TYPE_11__* %52)
  call void @finalfix(i32* %49, i32 %50, %struct.TYPE_11__* %51, %struct.TYPE_11__* %53)
  %54 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %55 = call %struct.TYPE_11__* @sib2(%struct.TYPE_11__* %54)
  store %struct.TYPE_11__* %55, %struct.TYPE_11__** %8, align 8
  br label %9

56:                                               ; preds = %37
  %57 = load i32*, i32** @numsiblings, align 8
  %58 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %59 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i32, i32* %57, i64 %61
  %63 = load i32, i32* %62, align 4
  %64 = icmp eq i32 %63, 0
  %65 = zext i1 %64 to i32
  %66 = call i32 @assert(i32 %65)
  br label %67

67:                                               ; preds = %13, %56
  ret void
}

declare dso_local i32 @fixonecall(i32*, i32, %struct.TYPE_11__*, %struct.TYPE_11__*) #1

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1

declare dso_local i32 @val2str(i32*, i32) #1

declare dso_local i32 @correctassociativity(%struct.TYPE_11__*) #1

declare dso_local %struct.TYPE_11__* @sib1(%struct.TYPE_11__*) #1

declare dso_local %struct.TYPE_11__* @sib2(%struct.TYPE_11__*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
